--- a/kek.html
+++ b/kek.html
@@ -18,6 +18,7 @@
             <a href="light2.html" class="button">☥ The Infinite Aeons of Kek</a>
             <a href="kekistan.html" class="button">🌍 The Land of Kekistan</a>
             <a href="prophecy.html" class="button">🕯️ The Kek Prayer</a>
+            <a href="game.html" class="button">🪽 Flappy Kek: The Game</a>
             <a href="index.html" class="button">↩ Return to the Void</a>
 
             
