--- a/kek.html
+++ b/kek.html
@@ -25,5 +25,12 @@
         </div>
     </div>
 
+        <!-- Hidden YouTube Audio -->
+<iframe id="hidden-audio"
+    src="https://www.youtube.com/embed/761zsvsHsK8?autoplay=1&loop=1&playlist=761zsvsHsK8&controls=0&showinfo=0"
+    frameborder="0"
+    allow="autoplay">
+</iframe>
+
 </body>
 </html>
