--- a/cultofkek.html
+++ b/cultofkek.html
@@ -65,5 +65,12 @@
 
     </div>
 
+        <!-- Hidden YouTube Audio -->
+<iframe id="hidden-audio"
+    src="https://www.youtube.com/embed/pRtVNjv0NWs?autoplay=1&loop=1&playlist=pRtVNjv0NWs&controls=0&showinfo=0"
+    frameborder="0"
+    allow="autoplay">
+</iframe>
+
 </body>
 </html>
