--- a/game.html
+++ b/game.html
@@ -24,6 +24,8 @@
     </style>
 </head>
 <body>
+
+    Work in progress, kek. Bear with me. The game mechanics is made by Grok 3 btw and its amazing. Just need to plug in the right graphics
     <canvas id="gameCanvas" width="612" height="367"></canvas>
     <script src="game.js"></script>
 </body>
