--- a/game.html
+++ b/game.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 
-    Work in progress, kek. Bear with me. The game mechanics is made by Grok 3 btw and its amazing. Just need to plug in the right graphics <br>
+    Work in progress, kek. <br> Please bear with me. <br> The game mechanics is made by Grok 3 btw and its amazing. <br> Just need to plug in the right graphics <br> praise kek! <br>
     
     <canvas id="gameCanvas" width="612" height="367"></canvas>
     <script src="game.js"></script>
