--- a/game.html
+++ b/game.html
@@ -19,14 +19,12 @@
             border: 1px solid black;
             max-width: 100%;
             max-height: 100vh;
-            touch-action: none; /* Prevents scrolling/zooming on touch */
+            touch-action: none;
         }
     </style>
 </head>
 <body>
-
     Work in progress, kek. <br> Please bear with me. <br> The game mechanics is made by Grok 3 btw and its amazing. <br> Just need to plug in the right graphics <br> praise kek! <br>
-    
     <canvas id="gameCanvas" width="612" height="367"></canvas>
     <script src="game.js"></script>
 </body>
