--- a/game.html
+++ b/game.html
@@ -4,52 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kekius Maximus: Pillars of Rome</title>
-    <style>
-        body {
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #000;
-            overflow: hidden;
-        }
-        #namePrompt {
-            display: block;
-            text-align: center;
-            color: white;
-        }
-        #nameInput {
-            padding: 5px;
-            margin: 10px;
-            font-size: 16px;
-        }
-        #startButton {
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        #gameCanvas {
-            display: none;
-        }
-    </style>
 </head>
 <body>
     <div id="namePrompt">
-        <h1>Kekius Maximus: Pillars of Rome</h1>
         <input type="text" id="nameInput" placeholder="Enter your name">
-        <br>
         <button id="startButton">Start Game</button>
     </div>
-    <canvas id="gameCanvas"></canvas>
-
-    <!-- Load Firebase SDKs (commented out if testing without Firebase) -->
-    <!--
-    <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-database.js"></script>
-    -->
-
-    <!-- Load your game.js -->
+    <canvas id="gameCanvas" style="display: none;"></canvas>
     <script src="game.js"></script>
 </body>
 </html>
